--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -22,8 +22,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-    </nav>
-    </nav>
+        </nav>
+    </header>
     <figure class="hero"></figure>
     <main class="content">
 
@@ -49,7 +49,7 @@
             </p>
         </section>
     </main>
-    <section class="benefits">
+    <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"  alt="Customers come directly to your site, lead generation"/>
@@ -71,9 +71,9 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
