Readme pushed to alpha

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>HORISEON code Refractor. Module-1 MSU Bootcamp</title>
 </head>
 
 <body>
