update push to alpha

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -13,6 +13,7 @@
         <nav>
             <ul>
                 <li>
+                    <!-- <a>> used to jump page to <main> <section> -->
                     <a href="#search-engine-optimization">Search Engine Optimizatiom </a> 
                 </li>
                 <li>
