README update push to alpha

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>HORISEON code Refractor. Module-1 MSU Bootcamp</title>
+    <title>Module-1 Challenge HTML CSS Git Challenge: Code Refactor
+    </title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
