--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Module-1 Challenge HTML CSS Git Challenge: Code Refactor
     </title>
-    <link rel="stylesheet" href="Docs/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
